syntax = "proto3";
package C2S;

/** remember to put your message here as a kind support**/
message Message {
    oneof kind {
        CS_TEST_ECHO CS_TEST_ECHO = 1;
        CS_ROLE_ONLINE CS_ROLE_ONLINE = 2;
        CS_ROLE_HEART_BEAT CS_ROLE_HEART_BEAT = 3;
        CS_ABC_DEF CS_ABC_DEF = 4;
        LOGIN_CS_LOGIN LOGIN_CS_LOGIN = 5;
        LOGIN_CS_CHOOSE_SERVER LOGIN_CS_CHOOSE_SERVER = 6;
        LOGIN_CS_GET_SERVER_LIST LOGIN_CS_GET_SERVER_LIST = 7;
        LOGIN_CS_GET_INFO LOGIN_CS_GET_INFO = 8;

        CS_RANK_GET_RANK CS_RANK_GET_RANK = 1801;

        CS_GUILD_CREATE CS_GUILD_CREATE = 1901;
    }
}

/** you must name the message in the following format: [PACKAGE_NAME]_[CONTROLLER_NAME]_[METHOD_NAME]**/
message CS_TEST_ECHO {
    enum Color {
        option allow_alias = true;
        RED = 0;
        BLUE = 1;
        YELLOW = 1;
    }
    string name = 1;
    string msg = 2;
    int64 b = 3;
    repeated int32 data = 4;
    Color color = 5;
    map<uint64, string> map = 6;
}

message CS_ROLE_HEART_BEAT {
    string msg = 1;
}

message CS_ABC_DEF {

}

message CS_ROLE_ONLINE {
    string token = 1;
    uint32 uid = 2;
}

message LOGIN_CS_LOGIN {
    string passport = 1;
    string pwd = 2;
    string device = 3;
    string device_uid = 4;
    string device_type = 5;
    string device_token = 6;
    uint32 platform = 7;
}

message LOGIN_CS_CHOOSE_SERVER {
    uint32 server_id = 1;
}

message LOGIN_CS_GET_SERVER_LIST {
}

message LOGIN_CS_GET_INFO {
    uint32 platform_id = 1;
    string client_version = 2;
}

message CS_RANK_GET_RANK {
    enum ERankType {
        level = 0;
        combat = 1;
    }
    repeated ERankType types = 1;
}

message CS_GUILD_CREATE {
    uint32 iconId = 1;
    string guildName = 2;
}